// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 eMLjll"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 doQqHL"
  />
</div>
`;

exports[`EmptyState w/ actions 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 eMLjll"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 doQqHL"
  >
    <div
      class="EmptyStatestyles__Row-sc-9kuou6-4 kgxSvL"
    >
      <div
        class="EmptyStatestyles__Actions-sc-9kuou6-3 dsbOCz"
      >
        EmptyState actions
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState w/ description 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 eMLjll"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 doQqHL"
  >
    <div
      class="EmptyStatestyles__Row-sc-9kuou6-4 kgxSvL"
    >
      <div
        class="EmptyStatestyles__Description-sc-9kuou6-2 gpNpEz"
      >
        EmptyState description
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState w/ loading: loading-false 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 eMLjll"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 doQqHL"
  />
</div>
`;

exports[`EmptyState w/ loading: loading-true 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 eMLjll"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 doQqHL"
  >
    <div
      class="EmptyStatestyles__Row-sc-9kuou6-4 kgxSvL"
    >
      <div
        class="Spinnerstyles__Box-moemrn-0 jPiLVW"
      >
        <svg
          class="Spinnerstyles__Svg-moemrn-1 cRsyFY"
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            class="Spinnerstyles__Circle-moemrn-2 dTrUIM"
            color="primary"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState w/ some child 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 eMLjll"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 doQqHL"
  >
    <div
      class="EmptyStatestyles__Row-sc-9kuou6-4 kgxSvL"
    >
      <div>
        Some child
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState w/ some props 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 eMLjll className"
  id="EmptyState"
  title="this is EmptyState"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 doQqHL"
  />
</div>
`;

exports[`EmptyState w/ title 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 eMLjll"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 doQqHL"
  >
    <div
      class="EmptyStatestyles__Row-sc-9kuou6-4 kgxSvL"
    >
      <div
        class="EmptyStatestyles__Title-sc-9kuou6-1 HwyCf"
      >
        EmptyState title
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState w/ title, descriptions, actions 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 eMLjll"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 doQqHL"
  >
    <div
      class="EmptyStatestyles__Row-sc-9kuou6-4 kgxSvL"
    >
      <div
        class="EmptyStatestyles__Title-sc-9kuou6-1 HwyCf"
      >
        EmptyState title
      </div>
    </div>
    <div
      class="EmptyStatestyles__Row-sc-9kuou6-4 kgxSvL"
    >
      <div
        class="EmptyStatestyles__Description-sc-9kuou6-2 gpNpEz"
      >
        EmptyState description
      </div>
    </div>
    <div
      class="EmptyStatestyles__Row-sc-9kuou6-4 kgxSvL"
    >
      <div
        class="EmptyStatestyles__Actions-sc-9kuou6-3 dsbOCz"
      >
        EmptyState actions
      </div>
    </div>
  </div>
</div>
`;
